# firmware

./: .gitignore  Cargo.toml  build.bash  firmware.hex
src/: lib.rs  main.rs
src/rt_tasks/: linear_systems.rs
